@@ -1,3 +1,8 @@
+1998-02-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Bug.m, FoodSpace.m: Include random.h instead of simtools.h. 
+	Reformatting throughout.
+
 1998-02-23  Alex Lancaster  <alex@santafe.edu>
 
 	* ModelSwarm.h: Include from objectbase/ instead of swarmobject/
